finalizando area1 do site

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
     <h2>Quatro bebidas, Um milhão<br/>de Razões</h2>
     <div class="area1--quote"> <em>Apenas ame a si mesmo e
      vocÊ está pronto</em></div>
+     <div class="area1--text">
+      Lady Gaga e Starbucks compartilham uma missão: construir um mundo mais 
+      gentil e corajoso. Por meio da Born This Way Foundation, Lady Gaga 
+      inspirou seus fãs a abraçar a gentileza em suas 
+      comunidades — online e no mundo. Com sua ajuda,
+       podemos capacitar os jovens a espalhar mais gentileza
+     </div>
   </div>
   <div class="area1--img1"></div>
   <div class="area1--img2"></div>
