finalizando section 2 HTML

--- a/index.html
+++ b/index.html
@@ -63,5 +63,24 @@
 
 </section>
 
+<section class="area2">
+    <div class="area2--content">
+      <div class="bar"></div>
+        <h2>Apresentando Vanilla Sweet Cream Cold Brew - Doce,
+          Cremoso, Frio, Ousado
+        </h2>
+      <div class="area2--text">
+        Pouco antes de servir, nossa mistura 
+        personalizada de café Starbucks Cold Brew de 
+        infusão lenta é coberta com uma camada delicada de 
+        creme doce de baunilha feito em casa que cai em cascata 
+        por toda a xícara.
+      </div>   
+      <a class="button" href="#">Saiba mais!</a>
+    </div>
+    <div class="area2--img1"></div>
+    <div class="area2--img2"></div>  
+</section>
+
 </body>
 </html>
